--- a/pubsub/Dockerfile
+++ b/pubsub/Dockerfile
@@ -1,12 +1,12 @@
 # Dockerfile
 FROM python:3.10
 
-WORKDIR .
-
-COPY requirements.txt .
-
-RUN pip install --no-cache-dir -r requirements.txt
+WORKDIR /app
 
 COPY . .
+
+RUN pip install --upgrade pip
+
+RUN pip install -r ./requirements.txt
 
 CMD [ "python", "./pubsub.py" ]
