--- a/Aplikacja/app/src/main/AndroidManifest.xml
+++ b/Aplikacja/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
             android:name=".TemperatureActivity"
             android:exported="false" />
         <activity
+            android:name=".HivesActivity"
+            android:exported="false" />
+        <activity
+
             android:name=".MainActivity"></activity>
 <!--            android:exported="true">-->
 <!--            <intent-filter>-->
