--- a/Aplikacja/app/src/main/AndroidManifest.xml
+++ b/Aplikacja/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
         android:name="android.permission.INTERNET"
         android:usesPermissionFlags="neverForLocation" />
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
