--- a/deploy_all.yaml
+++ b/deploy_all.yaml
@@ -8,47 +8,23 @@ metadata:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: multi-app-deployment
+  name: pubsub-deployment
   namespace: pam-ns
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: multi-app
+      app: pubsub
   template:
     metadata:
       labels:
-        app: multi-app
+        app: pubsub
     spec:
       containers:
       - name: pubsub
         image: piotrsicinski/pubsub:latest
         ports:
         - containerPort: 8080
-      - name: streamer
-        image: piotrsicinski/streamer:latest
-        ports:
-        - containerPort: 8081
-      - name: server
-        image: piotrsicinski/server:latest
-        ports:
-        - containerPort: 8082
-      - name: notifications
-        image: piotrsicinski/notifications:latest
-        ports:
-        - containerPort: 8084
-      - name: model-ai
-        image: piotrsicinski/model_ai:latest
-        ports:
-        - containerPort: 8085
-      - name: datamenager
-        image: piotrsicinski/datamenager:latest
-        ports:
-        - containerPort: 8086
-      - name: authorizeuser
-        image: piotrsicinski/authorizeuser:latest
-        ports:
-        - containerPort: 8087
 
 ---
 
@@ -59,13 +35,36 @@ metadata:
   namespace: pam-ns
 spec:
   selector:
-    app: multi-app
+    app: pubsub
   ports:
   - protocol: TCP
     port: 8080
     targetPort: 8080
-    nodePort: 30000
+    nodePort: 30001
   type: NodePort
+
+---
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: streamer-deployment
+  namespace: pam-ns
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: streamer
+  template:
+    metadata:
+      labels:
+        app: streamer
+    spec:
+      containers:
+      - name: streamer
+        image: piotrsicinski/streamer:latest
+        ports:
+        - containerPort: 8081
 
 ---
 
@@ -76,13 +75,36 @@ metadata:
   namespace: pam-ns
 spec:
   selector:
-    app: multi-app
+    app: streamer
   ports:
   - protocol: TCP
     port: 8081
     targetPort: 8081
-    nodePort: 30001
+    nodePort: 30002
   type: NodePort
+
+---
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: server-deployment
+  namespace: pam-ns
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: server
+  template:
+    metadata:
+      labels:
+        app: server
+    spec:
+      containers:
+      - name: server
+        image: piotrsicinski/server:latest
+        ports:
+        - containerPort: 8082
 
 ---
 
@@ -93,16 +115,78 @@ metadata:
   namespace: pam-ns
 spec:
   selector:
-    app: multi-app
+    app: server
   ports:
   - protocol: TCP
     port: 8082
     targetPort: 8082
-    nodePort: 30002
+    nodePort: 30003
   type: NodePort
 
 ---
 
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: pam-base-deployment
+  namespace: pam-ns
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: pam-base
+  template:
+    metadata:
+      labels:
+        app: pam-base
+    spec:
+      containers:
+      - name: pam-base
+        image: piotrsicinski/pam-base:latest
+        ports:
+        - containerPort: 8083
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: pam-base-service
+  namespace: pam-ns
+spec:
+  selector:
+    app: pam-base
+  ports:
+  - protocol: TCP
+    port: 8083
+    targetPort: 8083
+    nodePort: 30004
+  type: NodePort
+
+---
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: notifications-deployment
+  namespace: pam-ns
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: notifications
+  template:
+    metadata:
+      labels:
+        app: notifications
+    spec:
+      containers:
+      - name: notifications
+        image: piotrsicinski/notifications:latest
+        ports:
+        - containerPort: 8084
+
+---
 
 apiVersion: v1
 kind: Service
@@ -111,13 +195,36 @@ metadata:
   namespace: pam-ns
 spec:
   selector:
-    app: multi-app
+    app: notifications
   ports:
   - protocol: TCP
     port: 8084
     targetPort: 8084
-    nodePort: 30004
+    nodePort: 30005
   type: NodePort
+
+---
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: model-ai-deployment
+  namespace: pam-ns
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: model-ai
+  template:
+    metadata:
+      labels:
+        app: model-ai
+    spec:
+      containers:
+      - name: model-ai
+        image: piotrsicinski/model_ai:latest
+        ports:
+        - containerPort: 8085
 
 ---
 
@@ -128,13 +235,36 @@ metadata:
   namespace: pam-ns
 spec:
   selector:
-    app: multi-app
+    app: model-ai
   ports:
   - protocol: TCP
     port: 8085
     targetPort: 8085
-    nodePort: 30005
+    nodePort: 30006
   type: NodePort
+
+---
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: datamenager-deployment
+  namespace: pam-ns
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: datamenager
+  template:
+    metadata:
+      labels:
+        app: datamenager
+    spec:
+      containers:
+      - name: datamenager
+        image: piotrsicinski/datamenager:latest
+        ports:
+        - containerPort: 8086
 
 ---
 
@@ -145,13 +275,36 @@ metadata:
   namespace: pam-ns
 spec:
   selector:
-    app: multi-app
+    app: datamenager
   ports:
   - protocol: TCP
     port: 8086
     targetPort: 8086
-    nodePort: 30006
+    nodePort: 30007
   type: NodePort
+
+---
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: authorizeuser-deployment
+  namespace: pam-ns
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: authorizeuser
+  template:
+    metadata:
+      labels:
+        app: authorizeuser
+    spec:
+      containers:
+      - name: authorizeuser
+        image: piotrsicinski/authorizeuser:latest
+        ports:
+        - containerPort: 8087
 
 ---
 
@@ -162,10 +315,10 @@ metadata:
   namespace: pam-ns
 spec:
   selector:
-    app: multi-app
+    app: authorizeuser
   ports:
   - protocol: TCP
     port: 8087
     targetPort: 8087
-    nodePort: 30007
+    nodePort: 30008
   type: NodePort
