Streamer depl update

--- a/Streamer/Dockerfile
+++ b/Streamer/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app
 
 COPY . .
 
+RUN apt-get update && apt-get install ffmpeg libsm6 libxext6  -y
 RUN chmod +x RTMP_Server/rtsp-simple-server
 
-CMD [ "sh", "-c", "RTMP_Server/rtsp-simple-server & python ./app.py" ]
+CMD [ "sh", "-c", "cd RTMP_Server && ./rtsp-simple-server & cd .. && python ./app.py" ]
