--- a/deploy_all.yaml
+++ b/deploy_all.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name: pubsub
-        image: piotrsicinski/pubsub:latest
+        image: docker.io/piotrsicinski/pubsub:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
@@ -63,7 +63,7 @@ spec:
     spec:
       containers:
       - name: streamer
-        image: piotrsicinski/streamer:latest
+        image: docker.io/piotrsicinski/streamer:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
@@ -104,7 +104,7 @@ spec:
     spec:
       containers:
       - name: server
-        image: piotrsicinski/server:latest
+        image: docker.io/piotrsicinski/server:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
@@ -145,7 +145,7 @@ spec:
 #     spec:
 #       containers:
 #       - name: pam-base
-#         image: piotrsicinski/pam-base:latest
+#         image: docker.io/piotrsicinski/pam-base:latest
 #         ports:
 #         - containerPort: 8083
 
@@ -185,7 +185,7 @@ spec:
     spec:
       containers:
       - name: notifications
-        image: piotrsicinski/notifications:latest
+        image: docker.io/piotrsicinski/notifications:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
@@ -226,7 +226,7 @@ spec:
     spec:
       containers:
       - name: model-ai
-        image: piotrsicinski/model_ai:latest
+        image: docker.io/piotrsicinski/model_ai:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
@@ -267,7 +267,7 @@ spec:
     spec:
       containers:
       - name: datamenager
-        image: piotrsicinski/datamenager:latest
+        image: docker.io/piotrsicinski/datamenager:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
@@ -308,7 +308,7 @@ spec:
     spec:
       containers:
       - name: authorizeuser
-        image: piotrsicinski/authorizeuser:latest
+        image: docker.io/piotrsicinski/authorizeuser:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
@@ -350,7 +350,7 @@ spec:
     spec:
       containers:
       - name: mongo
-        image: mongodb/mongodb-community-server
+        image: docker.io/mongodb/mongodb-community-server
         imagePullPolicy: Always
         ports:
         - containerPort: 27017
@@ -391,7 +391,7 @@ spec:
     spec:
       containers:
       - name: mysql
-        image: mariadb:latest
+        image: docker.io/mariadb:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 3306
