--- a/deploy_all.yaml
+++ b/deploy_all.yaml
@@ -1,6 +1,3 @@
-# docker.io/docker.io/piotrsicinski
-# docker.io/piotrsicinski
-
 apiVersion: v1
 kind: Namespace
 metadata:
@@ -25,10 +22,12 @@ spec:
     spec:
       containers:
       - name: pubsub
-        image: docker.io/piotrsicinski/pubsub:latest
+        image: piotrsicinski/pubsub:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
+      imagePullSecrets:
+      - name: docker-secret
 
 ---
 
@@ -66,10 +65,12 @@ spec:
     spec:
       containers:
       - name: streamer
-        image: docker.io/piotrsicinski/streamer:latest
+        image: piotrsicinski/streamer:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
+      imagePullSecrets:
+      - name: docker-secret
 
 ---
 
@@ -107,10 +108,12 @@ spec:
     spec:
       containers:
       - name: server
-        image: docker.io/piotrsicinski/server:latest
+        image: piotrsicinski/server:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
+      imagePullSecrets:
+      - name: docker-secret
 
 ---
 
@@ -128,46 +131,6 @@ spec:
     targetPort: 5000
     nodePort: 30003
   type: NodePort
-
-# ---
-
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: pam-base-deployment
-#   namespace: pam-ns
-# spec:
-#   replicas: 1
-#   selector:
-#     matchLabels:
-#       app: pam-base
-#   template:
-#     metadata:
-#       labels:
-#         app: pam-base
-#     spec:
-#       containers:
-#       - name: pam-base
-#         image: docker.io/piotrsicinski/pam-base:latest
-#         ports:
-#         - containerPort: 8083
-
-# ---
-
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: pam-base-service
-#   namespace: pam-ns
-# spec:
-#   selector:
-#     app: pam-base
-#   ports:
-#   - protocol: TCP
-#     port: 8083
-#     targetPort: 8083
-#     nodePort: 30004
-#   type: NodePort
 
 ---
 
@@ -188,10 +151,12 @@ spec:
     spec:
       containers:
       - name: notifications
-        image: docker.io/piotrsicinski/notifications:latest
+        image: piotrsicinski/notifications:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
+      imagePullSecrets:
+      - name: docker-secret
 
 ---
 
@@ -229,10 +194,12 @@ spec:
     spec:
       containers:
       - name: model-ai
-        image: docker.io/piotrsicinski/model_ai:latest
+        image: piotrsicinski/model_ai:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
+      imagePullSecrets:
+      - name: docker-secret
 
 ---
 
@@ -270,10 +237,12 @@ spec:
     spec:
       containers:
       - name: datamenager
-        image: docker.io/piotrsicinski/datamenager:latest
+        image: piotrsicinski/datamenager:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
+      imagePullSecrets:
+      - name: docker-secret
 
 ---
 
@@ -311,10 +280,12 @@ spec:
     spec:
       containers:
       - name: authorizeuser
-        image: docker.io/piotrsicinski/authorizeuser:latest
+        image: piotrsicinski/authorizeuser:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
+      imagePullSecrets:
+      - name: docker-secret
 
 ---
 
