--- a/Streamer/Dockerfile
+++ b/Streamer/Dockerfile
@@ -7,4 +7,4 @@ COPY . .
 RUN apt-get update && apt-get install ffmpeg libsm6 libxext6  -y
 RUN chmod +x RTMP_Server/rtsp-simple-server
 
-CMD [ "sh", "-c", "cd RTMP_Server && ./rtsp-simple-server & cd .. && python ./app.py" ]
+CMD [ "sh", "-c", "cd /app/RTMP_Server && ./rtsp-simple-server & cd /app && python ./app.py" ]
