--- a/k8/broker.yaml
+++ b/k8/broker.yaml
@@ -42,6 +42,8 @@ spec:
       - name: config-volume
         configMap:
           name: mosquitto-config
+      imagePullSecrets:
+      - name: docker-secret
 
 ---
 apiVersion: v1
