--- a/k8/db.yaml
+++ b/k8/db.yaml
@@ -19,6 +19,8 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 27017
+      imagePullSecrets:
+      - name: docker-secret
 
 ---
 
@@ -63,6 +65,8 @@ spec:
         env:
         - name: MYSQL_ROOT_PASSWORD
           value: "password"
+      imagePullSecrets:
+      - name: docker-secret
 
 ---
 
