--- a/Model_AI/Dockerfile
+++ b/Model_AI/Dockerfile
@@ -4,6 +4,6 @@ WORKDIR /app
 
 COPY . .
 
-#RUN pip install -r ./requirements.txt
+RUN pip install -r ./requirements.txt
 
 CMD [ "python", "./app.py" ]
