--- a/k8/ubuntu.yaml
+++ b/k8/ubuntu.yaml
@@ -15,10 +15,13 @@ spec:
     spec:
       containers:
       - name: ubuntu
-        image: ubuntu:22.04 
+        image: ubuntu:latest
         imagePullPolicy: Always
         command: ["/bin/bash", "-c", "--"]
-        args: ["while true; do echo hello; sleep 10;done;"]
+        args: [
+          "apt-get update && apt-get install -y iputils-ping && apt-get install -y net-tools\
+          while true; do echo hello; sleep 10; done;"
+        ]
         ports:
         - containerPort: 80
         resources:
@@ -30,6 +33,7 @@ spec:
             memory: "500Mi"
       imagePullSecrets:
       - name: docker-secret
+
 
 ---
 
