--- a/k8/ubuntu.yaml
+++ b/k8/ubuntu.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: ubuntu
-        image: ubuntu:latest
+        image: ubuntu:22.04
         imagePullPolicy: Always
         command: ["/bin/bash", "-c", "--"]
         args: [
