--- a/k8/broker.yaml
+++ b/k8/broker.yaml
@@ -34,6 +34,13 @@ spec:
           name: mqtt
         - containerPort: 9001
           name: websocket
+        resources:
+          requests:
+            cpu: "500m"
+            memory: "400Mi"
+          limits:
+            cpu: "1000m"
+            memory: "800Mi"
         volumeMounts:
         - name: config-volume
           mountPath: /mosquitto/config/mosquitto.conf
