--- a/k8/db.yaml
+++ b/k8/db.yaml
@@ -19,6 +19,13 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 27017
+        resources:
+          requests:
+            cpu: "500m"
+            memory: "400Mi"
+          limits:
+            cpu: "1000m"
+            memory: "800Mi"
       imagePullSecrets:
       - name: docker-secret
 
@@ -62,6 +69,13 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 3306
+        resources:
+          requests:
+            cpu: "500m"
+            memory: "400Mi"
+          limits:
+            cpu: "1000m"
+            memory: "800Mi"
         env:
         - name: MYSQL_ROOT_PASSWORD
           value: "password"
